remove fixed header height to fix overlap problem

--- a/_sass/_header.scss
+++ b/_sass/_header.scss
@@ -26,7 +26,7 @@
   display: grid;
   grid-gap: 0px;
   z-index: 5;
-  height: $header-height;
+//  height: $header-height;
 
   grid-template-rows: $header-height;
 
